<resources>
    <string name="app_name">InLocker_shopkeeper</string>

    <string name="uid">User ID</string>
    <string name="pwd">Password</string>
    <string name="pwd_c">Confirm Password</string>
    <string name="forgot_pwd">forgot password?</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign-up</string>
    <string name="emailAdr">Email address</string>

    <string name="view_edit_item">View &amp; Edit Items</string>
    <!-- <string name="edit_store">Edit Store</string> -->
    <string name="finished_order">Finished Orders</string>

    <string name="preview">Preview</string>
    <string name="addNewItem">Add New Product</string>
    <string name="editCategory">Edit Categories</string>

    <string name="saveCategory">Save Category</string>

    <string name="storeInfo">Store Info</string>
    <string name="saveInfo">Save Info</string>
    <string name="storeName">Store Name</string>
    <string name="phoneNo">Phone number</string>
    <string name="address">Store address</string>

    <string name="itemName">Item name</string>
    <string name="itemPrice">Item price</string>
    <string name="itemAmount">Item amount</string>
    <string-array name="itemCategory">
        <item>--Please choose--</item>
        <item>Drinks</item>
        <item>Clothes</item>
        <item>Stationery</item>
        <item>Drugs</item>
        <item>Daily Essentials</item>
    </string-array>
    <string name="itemSave">Save</string>
    <string name="itemClearContents">Clear</string>
</resources>
