<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal1_setStoreInfo_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/horizontal2_setStoreInfo_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.9" />

    <Button
        android:id="@+id/saveInfo_setStoreInfoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/saveInfo"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal2_setStoreInfo_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/phoneNo_setStoreInfo_editText"
        style="@style/customEditText"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="phone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/phoneNo_setStoreInfo_textView" />

    <TextView
        android:id="@+id/phoneNo_setStoreInfo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/phoneNo"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/phoneNo_setStoreInfo_editText"
        app:layout_constraintTop_toBottomOf="@+id/storeName_setStoreInfo_editText" />

    <TextView
        android:id="@+id/storeAddr_setStoreInfo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/address"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/storeAddr_setStoreInfo_editText"
        app:layout_constraintTop_toBottomOf="@+id/phoneNo_setStoreInfo_editText" />

    <EditText
        android:id="@+id/storeAddr_setStoreInfo_editText"
        style="@style/customEditText"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:gravity="start|top"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeAddr_setStoreInfo_textView" />

    <TextView
        android:id="@+id/title_setStoreInfo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storeInfo"
        android:textColor="@color/white"
        android:textSize="32sp"
        app:layout_constraintBottom_toTopOf="@+id/horizontal1_setStoreInfo_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/storeName_setStoreInfo_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/storeName"
        android:textColor="@color/white"
        android:textSize="22sp"
        app:layout_constraintStart_toStartOf="@+id/storeName_setStoreInfo_editText"
        app:layout_constraintTop_toTopOf="@+id/horizontal1_setStoreInfo_guideline" />

    <EditText
        android:id="@+id/storeName_setStoreInfo_editText"
        style="@style/customEditText"
        android:layout_width="wrap_content"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/storeName_setStoreInfo_textView" />

</androidx.constraintlayout.widget.ConstraintLayout>