<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/email_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/emailAdr"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/email_login_editText"
        app:layout_constraintTop_toTopOf="@+id/upper_login_guideline" />

    <EditText
        android:id="@+id/email_login_editText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_login_textView" />

    <TextView
        android:id="@+id/pwd_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/pwd"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="@+id/pwd_login_editText"
        app:layout_constraintTop_toBottomOf="@+id/email_login_editText" />

    <EditText
        android:id="@+id/pwd_login_editText"
        android:layout_width="wrap_content"
        android:layout_height="32dp"
        android:layout_marginTop="4dp"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/email_login_editText"
        app:layout_constraintTop_toBottomOf="@+id/pwd_login_textView" />

    <TextView
        android:id="@+id/forgot_pwd_login_textView"
        android:layout_width="wrap_content"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:background="@color/red"
        android:text="@string/forgot_pwd"
        android:textColor="@color/bone"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="@+id/pwd_login_editText"
        app:layout_constraintTop_toBottomOf="@+id/pwd_login_editText" />

    <Button
        android:id="@+id/loginBtn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login"
        app:layout_constraintBottom_toTopOf="@+id/under_login_guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/upper_login_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/under_login_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

    <ProgressBar
        android:id="@+id/login_progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:indeterminateTint="@color/white"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>